update the components

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -31,7 +31,7 @@
     .logo-center{
         margin: 0 auto;
     }
-    .btn-phone{
+    .btn-phone-whatsapp{
         margin: 0 0 0 0px;
     }
 }
