--- a/src/components/jumbotron.css
+++ b/src/components/jumbotron.css
@@ -1,7 +1,7 @@
 .deck{
     display:flex;
     flex-flow: row wrap;
-    padding: 100px 50px 100px 50px;
+    padding: 100px 100px 100px 100px;
     align-items: center;
     text-align: center;
     background-image: url('../assets/girl_3_filter.jpg'); 
@@ -15,10 +15,6 @@
     padding: 100px 100px 0 100px;
     align-items: center;
     text-align: center;
-}
-
-.card-row{
-    display: flex;
 }
 
 .headingh2{
@@ -35,22 +31,14 @@
 }
 
 .custom-card{
-    padding: 30px 0 30px 0;
+    padding: 50px 0 50px 0;
     align-items: center;
     text-align: center;
     background-color: rgba(255,255,255,0.5);
-    margin-left: 5px;
-    margin-right: 5px;
-
 }
 
 .img-size{
-    width:60%;
-}
-
-.vid-size{
-    width:230px;
-    height:200px;
+    width:50%;
 }
 
 @media only screen and (max-width: 500px) {
@@ -60,29 +48,6 @@
     }
     .phone-container{
         margin:0 0 0 0;
-        padding:50px 0 50px 0;
-    }
-
-    .card-row-ipad{
-        display: flex;
-        flex-flow: row wrap;
-
-    }
-}
-
-@media only screen and (max-width: 770px) {
-    .phone-card{
-        margin:10px 10px 10px 10px;
-        width:100%;
-    }
-    .phone-container{
-        margin:10px 10px 10px 10px;
-        padding:30px 0 30px 0;
-    }
-
-    .card-row-ipad{
-        display: flex;
-        flex-flow: row wrap;
-
+        padding:0 0 0 0;
     }
 }
