--- a/src/components/Carousel.css
+++ b/src/components/Carousel.css
@@ -4,7 +4,7 @@
 
 
 .image-size{
-    height:480px;
+    height:500px;
     width:100%;
 }
 
@@ -25,5 +25,50 @@
     .image-size{
         height:auto;
         width:100%;
+    }
+
+    .image-size-1{
+        height:auto;
+        width:100%;
+    }
+}
+
+@media only screen and (max-width: 380px) {
+    .carousel-display{
+        width:100%;
+        height:500px;
+    }
+    .image-size{
+        height:100%;
+        width:800px;
+        left:50%;
+        margin-left: -210px;
+    }
+
+    .image-size-1{
+        height:100%;
+        width:800px;
+        left:50%;
+        margin-left: -150px;
+    }
+}
+
+@media (max-width: 420px) {
+    .carousel-display{
+        width:100%;
+        height:500px;
+    }
+    .image-size{
+        height:100%;
+        width:800px;
+        left:50%;
+        margin-left: -192px;
+    }
+
+    .image-size-1{
+        height:100%;
+        width:800px;
+        left:50%;
+        margin-left: -145px;
     }
 }
