--- a/src/components/overlay.css
+++ b/src/components/overlay.css
@@ -1,57 +1,104 @@
-.overlay {
+.overlay-comp{
     z-index: 5;
     position: absolute;
     top: 540px;
-    width: 80%;
+    width: 60%;
+    height:auto;
     border: 1px  #900;
     background: linear-gradient(to right,  grey 0%, grey 50%, black 50%, black 100%);
     background-repeat: no-repeat;
     padding: 15px 15px 15px 15px;
     border-radius: 4px;
     align-items: center;
-    transform: translate(11.2%,0%);
-  }
-
-
-  
-
-  .overlay2 {
-    z-index: 6;
-    position: absolute;
-    top: 580px;
-    left:70%;
-    right:50%;
-    width: 610px;
-    border: 1px  #900;
-    background-color:black;
-    padding: 15px 15px 15px 15px;
-    border-radius: 4px;
-    transform: translate(-50%, -50%);
-    align-items: center;
-  }
-
-  .input-size{
-    position:relative;
-    width:74%;
-    padding-left: 10px;
-  }
-  .input-relative{
-    float:left;
-  }
-
-  .input-div{
-    margin-left:20px;
-    margin-top:0;
-  }
-
-  .button-pad{
-    padding-left: 13px;
-    padding-right: 14px;
-  }
-
-  @media only screen and (max-width: 1100px) {
-    .overlay-dissapear{
-        display:none;
-    }
+    transform: translate(32%,10%);
+    background-position: center;
 }
 
+.btn-comp{
+    padding-left: 10px;
+    padding-right: 14px;
+    margin-right:5px;
+    width: 100%;
+    height:45px;
+    position:relative;
+}
+
+.input-div-comp{
+  margin-left:20px;
+  margin-top:0;
+}
+
+.font-sz-comp{
+  font-size: 20px;
+}
+
+
+
+@media only screen and (max-width: 770px) {
+  .overlay-ipad{
+    z-index: 5;
+    position: absolute;
+    top: 330px;
+    width: 80%;
+    height:7%;
+    border: 1px  #900;
+    background: linear-gradient(to right,  grey 0%, grey 50%, black 50%, black 100%);
+    background-repeat: no-repeat;
+    padding: 15px 15px 15px 15px;
+    border-radius: 4px;
+    align-items: center;
+    transform: translate(10%,0%);
+  }
+
+  .btn-ipad{
+    padding-left: 10px;
+    padding-right: 14px;
+    width:240px;
+    height:45px;
+  }
+
+  .font-sz-ipad{
+    font-size: 15px;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .overlay-phone{
+    background: transparent;
+    
+  }
+
+  .btn-phone{
+    padding-left: 10px;
+    padding-right: 14px;
+    width:240px;
+    height:45px;
+  }
+
+  .font-sz-phone{
+    font-size:15px;
+  }
+}
+
+@media only screen and (max-width: 380px) {
+  .overlay-phone{
+    background: transparent;
+    
+  }
+
+  .btn-phone{
+    padding-left: 10px;
+    padding-right: 14px;
+    width:240px;
+    height:45px;
+  }
+
+  .input-div-phone{
+    margin-left:10px;
+    margin-top:0;
+  }
+}
+
+
+
+    
