--- a/src/components/services/services.css
+++ b/src/components/services/services.css
@@ -114,9 +114,18 @@
         font-family: Arial, Helvetica, sans-serif;
         font-weight: 500;
         font-size: 18px;
-        margin-top:65px;
-        margin-bottom: 45px;
+        margin-top:23px;
+        margin-bottom: 0px;
     }
+    .icon-ipad{
+        margin-top: 0px;;
+        width:87.5px;
+        height:110.3px;
+    }
+    .icon-ipad-2{
+        margin-top:30px;
+    }
+
 }
 
 
